<resources>
    <string name="app_name">Recipe Finder</string>
    <string name="favorites">Favorites</string>
    <string name="category">Categories</string>
    <string name="random_recipe">Random</string>
    <string name="ingredient">Ingredients</string>
    <string name="countries">Countries</string>
    <string name="search_recipe_by_name">Search recipe by name</string>
    <string name="find_my_country_recipes">Look for %s recipes</string>
    <string name="principal_title">Find your favorite recipe</string>
</resources>