...
            android:src="@mipmap/ic_launcher"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@id/btn_my_country"
            app:layout_constraintTop_toTopOf="@id/btn_my_country" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_secondary"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_my_country" />
...
