...
                    android:layout_weight="2"
                    android:text="Ingredients"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:fontFamily="sans-serif-medium" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    />

                <View
...
